--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-# Payload secret - use a long random string in production
-PAYLOAD_SECRET=your-secret-key-here
-
-# MongoDB connection string (or use SQLite adapter for local dev)
-DATABASE_URL=mongodb://localhost:27017/naseeha
+# Optional: add any env vars your app needs (e.g. AWS_* for uploads)
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_REGION=ap-south-1
