--- a/package.json
+++ b/package.json
@@ -7,22 +7,13 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint",
-    "payload": "payload",
-    "generate:types": "payload generate:types",
-    "generate:importmap": "payload generate:importmap"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "^3.0.0",
-    "@payloadcms/next": "^3.0.0",
-    "@payloadcms/richtext-lexical": "^3.0.0",
-    "graphql": "^16.8.1",
     "next": "^15.0.0",
-    "payload": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.0.0",
-    "sharp": "^0.33.0"
+    "react-icons": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
