--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,13 @@
 # AWS_ACCESS_KEY_ID=
 # AWS_SECRET_ACCESS_KEY=
 # AWS_REGION=ap-south-1
+
+# Payload CMS
+PAYLOAD_SECRET=change-me-to-a-long-random-secret
+DATABASE_URL=file:./payload.db
+
+# Google Search Console verification token
+GOOGLE_SITE_VERIFICATION=
+
+# Public site URL used for canonical tags, sitemap, robots and schema
+NEXT_PUBLIC_SITE_URL=https://www.drnaseehashomoeopathicclinicmelattur.com
