--- a/package.json
+++ b/package.json
@@ -8,21 +8,29 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "optimize-images": "node scripts/optimize-images.mjs"
+    "optimize-images": "node scripts/optimize-images.mjs",
+    "payload": "payload",
+    "payload:generate-types": "payload generate:types",
+    "payload:generate-db-schema": "payload generate:db-schema"
   },
   "dependencies": {
+    "@payloadcms/db-sqlite": "^3.76.1",
+    "@payloadcms/next": "^3.76.1",
+    "@payloadcms/richtext-lexical": "^3.76.1",
+    "graphql": "^16.12.0",
     "next": "^15.0.0",
+    "payload": "^3.76.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.0.0"
   },
   "devDependencies": {
-    "sharp": "^0.33.5",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.0",
+    "sharp": "^0.33.5",
     "typescript": "^5.0.0"
   },
   "engines": {
